# Search_and_Rescue

./: README.md
search_and_rescue/: CMakeLists.txt  package.xml
search_and_rescue/action/: target_status.action
search_and_rescue/scripts/: action_server.py
search_and_rescue/src/: drones_mission.py  test_action_server.py  ugv_mission.py
